feat: add advisories api
